objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Diversity_Spend_Interest_Need__c</fullName>
        <label>Diversity Spend Interest / Need</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Either Tier 1 or Tier 2</fullName>
                </value>
                <value>
                    <fullName>Both Tier 1 and Tier 2</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diversity_Type_Interest_Need__c</fullName>
        <label>Diversity Type Interest / Need</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disability Owned/Certified</fullName>
                </value>
                <value>
                    <fullName>LGBTQ Owned/Certified</fullName>
                </value>
                <value>
                    <fullName>Minority Owned/Certified</fullName>
                </value>
                <value>
                    <fullName>Native Alaskan Owned/Certified</fullName>
                </value>
                <value>
                    <fullName>Native American Owned/Certified</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>Veteran Owned/Certified</fullName>
                </value>
                <value>
                    <fullName>Woman Owned/Certified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Count__c</fullName>
        <description>Added Employee Count for G&amp;T.  Similar to White Collar Workers.</description>
        <label>Employee Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engage_Bid_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used for Grand and Toy: a BDM MA request form was sent to BDMMA with a core list of products for them to price</description>
        <label>Mid Market Bid Team Engaged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engage_IT_Integration_Mgr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engage IT Integration Mgr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engage_Implementation_Mgr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engage Implementation Mgr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engage_Overlay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engage Overlay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Revenue_TY__c</fullName>
        <label>Estimated Revenue TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Execute_Evaluation_Plan_Steps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Execute Evaluation Plan Steps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Execute_Implementation_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Execute Implementation Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Revenue_TY__c</fullName>
        <label>Expected Revenue TY</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Extensions_Possible__c</fullName>
        <label>Extensions Possible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finalize_T_s_C_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finalize T&apos;s &amp; C&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Find_Pain_Points__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Find Current Pain Points</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Appointment_is_set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Appointment is set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <formula>CASE(MONTH(datevalue(CreatedDate) ),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Commit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forecast Commit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gain_Commitmnt_to_move_forward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recap Meeting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Get_Pain_Admitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Get Pain Admitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grandparent__c</fullName>
        <formula>Account.Grandparent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grandparent?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Green_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the customer interested in green solutions at this time?</inlineHelpText>
        <label>Green Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Recurring__c</fullName>
        <formula>Recurring_Product_Count__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IMU_Amount__c</fullName>
        <formula>Amount * IMU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMU Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMU__c</fullName>
        <label>IMU%</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IOWNACCOUNT__c</fullName>
        <formula>IF (Account.OwnerId  = $User.Id || 
Account.Sales_PersonID__r.User__r.ManagerId = $User.Id || Account.Sales_PersonID__r.User__r.Manager.ManagerId = $User.Id || Account.Sales_PersonID__r.User__r.Manager.Manager.ManagerId = $User.Id ||  Related_Site__r.OwnerId = $User.Id ||  Related_Site__r.Sales_PersonID__r.User__r.ManagerId = $User.Id || Related_Site__r.Sales_PersonID__r.User__r.Manager.ManagerId = $User.Id || Related_Site__r.Sales_PersonID__r.User__r.Manager.Manager.ManagerId = $User.Id  ,&quot;yes&quot;,&quot;no&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IOWNACCOUNT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identify_Research_Qualify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identify, Research &amp; Qualify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identify_Success_Criterion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identify Success Criterion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InProgress__c</fullName>
        <formula>CASE(Status__c, &quot;Open&quot;,
CASE(  LastModifiedDate,CreatedDate,
CASE( LastModifiedById ,&quot;Dataloader&quot;,CASE (Legacy_LastModifiedDate__c,Legacy_CreatedDate__c,&quot;N&quot;,&quot;Y&quot;),&quot;N&quot;) ,
CASE ( Legacy_LastModifiedDate__c,Legacy_CreatedDate__c ,&quot;N&quot;,&quot;Y&quot;)
)
, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InProgress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Info_Qualified_and_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Info Qualified and Added to Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initiatives__c</fullName>
        <label>Initiatives</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CDEF Rollout-Tech Only</fullName>
                </value>
                <value>
                    <fullName>CompuCom: Bus Wireless Plans</fullName>
                </value>
                <value>
                    <fullName>CompuCom: Get-10</fullName>
                </value>
                <value>
                    <fullName>CompuCom: ITAD &amp; Resell</fullName>
                </value>
                <value>
                    <fullName>CompuCom: Lifecycle Services</fullName>
                </value>
                <value>
                    <fullName>CompuCom: Managed Mobile Expenses</fullName>
                </value>
                <value>
                    <fullName>CompuCom: Mobile Services</fullName>
                </value>
                <value>
                    <fullName>Enterprise Pursuit</fullName>
                </value>
                <value>
                    <fullName>Govt - Fed</fullName>
                </value>
                <value>
                    <fullName>GPO - Amerinet</fullName>
                </value>
                <value>
                    <fullName>GPO - MedAssets</fullName>
                </value>
                <value>
                    <fullName>GPO - Novation</fullName>
                </value>
                <value>
                    <fullName>HP Supply - Hardware Target</fullName>
                </value>
                <value>
                    <fullName>HP Target Account</fullName>
                </value>
                <value>
                    <fullName>HP White Space-TECH ONLY</fullName>
                </value>
                <value>
                    <fullName>Inscape Flip</fullName>
                </value>
                <value>
                    <fullName>Interiors Annuity</fullName>
                </value>
                <value>
                    <fullName>Interiors Pursuit</fullName>
                </value>
                <value>
                    <fullName>K-12 California Department of Education</fullName>
                </value>
                <value>
                    <fullName>K-12 Georgia Vision Project</fullName>
                </value>
                <value>
                    <fullName>K-12 One-to-One Initiatives</fullName>
                </value>
                <value>
                    <fullName>K-12 TCPN Strategy</fullName>
                </value>
                <value>
                    <fullName>TAP</fullName>
                </value>
                <value>
                    <fullName>TCPN - Education</fullName>
                </value>
                <value>
                    <fullName>TCPN - Local/State/Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Teknion Grandfathered</fullName>
                </value>
                <value>
                    <fullName>WIG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_ILC_Owned__c</fullName>
        <formula>Owner.Is_ILC_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is ILC Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ILC_Owned_del__c</fullName>
        <formula>Owner.Is_ILC_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is ILC Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Opportunity_Owner_ILC__c</fullName>
        <formula>Owner.Is_ILC_Rep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Opportunity Owner ILC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsloggedinUser__c</fullName>
        <formula>if($User.Id==OwnerId, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsloggedinUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>K12_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ILC Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeAccountName__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__TotalOpenLatticeRecommendations__c</fullName>
        <label>Total Open Lattice Recommendations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Partner_Update_Age_Days__c</fullName>
        <description>Story 01541401</description>
        <formula>TODAY() - Last_Update_From_CompuCom__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Partner Update Age (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Stage_Change__c</fullName>
        <label>Last Stage Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Update_From_CompuCom__c</fullName>
        <description>Story 01487964</description>
        <label>Last Update From CompuCom</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Channel__c</fullName>
        <formula>CASE(LeadSource, 
&apos;TZ: Account Management&apos;, &apos;Field Rep&apos;, 
&apos;TZ: BSD Referral&apos;, &apos;BSD&apos;, 
&apos;TZ: BSD Mailstream&apos;, &apos;Customer Mining&apos;, 
&apos;TZ: Business Pro Referral&apos;, &apos;Business Pro&apos;, 
&apos;TZ: Chamber of Commerce&apos;, &apos;Field Rep&apos;, 
&apos;TZ: Channel Alternate&apos;, &apos;Indirect&apos;, 
&apos;TZ: Channel Partner&apos;, &apos;Indirect&apos;, 
&apos;TZ: CompuCom Chat&apos;, &apos;Marketing&apos;, 
&apos;TZ: CompuCom Phone&apos;, &apos;Marketing&apos;, 
&apos;TZ: CompuCom Referral&apos;, &apos;Field Rep&apos;, 
&apos;TZ: CompuCom Website&apos;, &apos;Marketing&apos;, 
&apos;TZ: Content Syndication&apos;, &apos;Marketing&apos;,
&apos;TZ: Customer Referral Form&apos;, &apos;Store&apos;, 
&apos;TZ: Direct Mail&apos;, &apos;Marketing&apos;,
&apos;TZ: Email Marketing&apos;, &apos;Marketing&apos;, 
&apos;TZ: Event&apos;, &apos;Marketing&apos;, 
&apos;TZ: Grand &amp; Toy Referral&apos;, &apos;Grand &amp; Toy&apos;, 
&apos;TZ: Marketopia&apos;, &apos;Prospecting&apos;, 
&apos;TZ: Office Depot Website&apos;, &apos;Online&apos;, 
&apos;TZ: Other&apos;, &apos;Field Rep&apos;, 
&apos;TZ: Paid Display&apos;, &apos;Marketing&apos;,
&apos;TZ: Paid Social&apos;, &apos;Marketing&apos;,
&apos;TZ: PPC&apos;, &apos;Marketing&apos;,
&apos;TZ: Reveneer&apos;, &apos;Prospecting&apos;, 
&apos;TZ: Self&apos;, &apos;Field Rep&apos;, 
&apos;TZ: Store Associate Referral&apos;, &apos;Store&apos;, 
&apos;TZ: Store Visitor&apos;, &apos;Store&apos;, 
&apos;TZ: Telemarketing&apos;, &apos;Marketing&apos;, 
&apos;TZ: TZ BDR&apos;, &apos;Prospecting&apos;, 
&apos;TZ: TZ Chat&apos;, &apos;Marketing&apos;,
&apos;TZ: TZ Phone&apos;, &apos;Marketing&apos;,
&apos;TZ: TZ Technician&apos;, &apos;Marketing&apos;, 
&apos;TZ: TZ Website&apos;, &apos;Marketing&apos;, 
&apos;TZ: Webinar&apos;, &apos;Marketing&apos;,
&apos;Other&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Page_Source__c</fullName>
        <label>Lead Page Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <description>Additional detail such as a list name supplementing the value captured in the Lead Source field.</description>
        <label>Lead Source Detail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leads_POC_Opp_Goal__c</fullName>
        <formula>if(Owner.Profile.Name = &quot;LatticeUser - Inside Sales&quot; || Owner.Profile.Name = &quot;Salesi - Inside Sales&quot; || Owner.Profile.Name = &quot;Inside Sales&quot; || Owner.Profile.Name = &quot;Inside Sales Mgr&quot;, 15, 3)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leads POC Opp Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_CreatedBy__c</fullName>
        <label>Legacy CreatedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CreatedDate__c</fullName>
        <label>Legacy CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_LastModifiedBy__c</fullName>
        <label>Legacy LastModifiedBy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_LastModifiedDate__c</fullName>
        <label>Legacy LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lack of Authority</fullName>
                </value>
                <value>
                    <fullName>Lack of Need / Interest</fullName>
                </value>
                <value>
                    <fullName>Lack of Offering</fullName>
                </value>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>Preferred Local Competitor</fullName>
                </value>
                <value>
                    <fullName>Price Too High</fullName>
                </value>
                <value>
                    <fullName>Stayed with Current Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Amt__c</fullName>
        <formula>IF( Probability = 0, Amount, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Field__c</fullName>
        <label>Manufacturer Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketo_Sync_Flag__c</fullName>
        <description>Required Marketo sync field</description>
        <formula>if (RecordTypeId = &apos;012E000000093Jv&apos; , true, if(RecordTypeId = &apos;01244000000Rd7u&apos;, true,false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Marketo Sync Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Master_Agent_Number__c</fullName>
        <formula>Partner_Sub_Agent_Account__r.Parent.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master Agent Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monetization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monetization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Amount__c</fullName>
        <label>Monthly Recurring Amount</label>
        <summarizedField>OpportunityLineItem.Monthly_Recurring_Total_Price__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Most_recent_Product__c</fullName>
        <inlineHelpText>getting most recent Product on the related list</inlineHelpText>
        <label>Most recent Product</label>
        <summarizedField>OpportunityLineItem.CreatedDate</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Needs_Assessment_Call_Completed__c</fullName>
        <inlineHelpText>Have you completed a Needs Assessment Call with this customer?</inlineHelpText>
        <label>Needs Assessment Call Completed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Negotiate_Access_to_Power__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negotiate Access to Power</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Networked_Printers__c</fullName>
        <label># Devices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Step_Date__c</fullName>
        <description>Story# 02803676</description>
        <label>Next Step Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Ordering__c</fullName>
        <formula>IF(ISPICKVAL(Product__c, &apos;All Supplies&apos;)&amp;&amp;(Account.YTD_Sales_TY__c&gt;0)&amp;&amp;(IsWon),1,
IF(ISPICKVAL(Product__c, &apos;CBFS&apos;)&amp;&amp;(Account.CBS_TY__c&gt;0)&amp;&amp;(IsWon),1,
IF(ISPICKVAL(Product__c, &apos;CPD-Print&apos;)&amp;&amp;(Account.CPD_TY__c&gt;0)&amp;&amp;(IsWon),1,
IF(ISPICKVAL(Product__c, &apos;CPD-Promo&apos;)&amp;&amp;(Account.CPD_TY__c&gt;0)&amp;&amp;(IsWon),1,
IF(ISPICKVAL(Product__c, &apos;Furniture&apos;)&amp;&amp;(Account.Furniture_TY__c &gt;0)&amp;&amp;(IsWon),1,
IF(ISPICKVAL(Product__c, &apos;Ink &amp; Toner&apos;)&amp;&amp;(Account.Ink_Toner_TY__c&gt;0)&amp;&amp;(IsWon),1,
IF(ISPICKVAL(Product__c, &apos;MPS&apos;)&amp;&amp;(Account.MPS_TY__c&gt;0)&amp;&amp;(IsWon),1,
IF(ISPICKVAL(Product__c, &apos;Paper&apos;)&amp;&amp;(Account.Paper_TY__c&gt;0)&amp;&amp;(IsWon),1,
IF(ISPICKVAL(Product__c, &apos;Tech&apos;)&amp;&amp;(Account.Tech_TY__c&gt;0)&amp;&amp;(IsWon),1,
IF(ISPICKVAL(Product__c, &apos;Filing &amp; Binding&apos;)&amp;&amp;(Account.Filing_Binding_TY__c&gt;0)&amp;&amp;(IsWon),1,
IF(ISPICKVAL(Product__c, &apos;Labels &amp; Forms&apos;)&amp;&amp;(Account.Labels_Forms_TY__c&gt;0)&amp;&amp;(IsWon),1,
IF(ISPICKVAL(Product__c, &apos;Miscellaneous&apos;)&amp;&amp;(Account.Miscellaneous_TY__c&gt;0)&amp;&amp;(IsWon), 1,
IF(ISPICKVAL(Product__c, &apos;Office Essentials&apos;)&amp;&amp;(Account.Office_Essentials_TY__c&gt;0)&amp;&amp;(IsWon), 1,
IF(ISPICKVAL(Product__c, &apos;Writing &amp; Drafting&apos;)&amp;&amp;( Account.Writing_Drafting_TY__c&gt;0)&amp;&amp;(IsWon), 1,0))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ordering #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLI_Count__c</fullName>
        <label>OLI Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OMX_Primary_Key__c</fullName>
        <description>OMX Primary Key</description>
        <externalId>true</externalId>
        <inlineHelpText>OMX Primary Key</inlineHelpText>
        <label>OMX Primary Key</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>One_Time_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <description>PPE-CBFS personal protection equiptment</description>
        <label>One Time Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Opportunity_Count__c</fullName>
        <description>To count any open opportunities with Close Date greater than today</description>
        <formula>IF( CloseDate   &gt;=   TODAY(),1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Opportunity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Operation_Joint_Forces__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operation Joint Forces</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>IF(RecordTypeId == $Label.Opportunity_GT_Record_Type || RecordTypeId == $Label.Opportunity_GTCompuComReferral, Amount_CAD__c , Amount )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_Case_Safe__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <label>Opportunity ID (Case Safe)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_Long__c</fullName>
        <description>Should pull in 18 digit Opportunity ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID (Long)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <displayFormat>OP-{000000}</displayFormat>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Source__c</fullName>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2019 Back in Black Blitz</fullName>
                </value>
                <value>
                    <fullName>Acquisition-Operation Unite</fullName>
                </value>
                <value>
                    <fullName>Back to Business 2020</fullName>
                </value>
                <value>
                    <fullName>Back to Business - Remote 2020</fullName>
                </value>
                <value>
                    <fullName>Back to School 2020</fullName>
                </value>
                <value>
                    <fullName>Back to School - Remote 2020</fullName>
                </value>
                <value>
                    <fullName>BTS - Desk Shields</fullName>
                </value>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Dispenser Placement Program</fullName>
                </value>
                <value>
                    <fullName>Focus on Facilities</fullName>
                </value>
                <value>
                    <fullName>Furniture – CompuCom Interiors Referral</fullName>
                </value>
                <value>
                    <fullName>Furniture – CompuCom Solution Café</fullName>
                </value>
                <value>
                    <fullName>Furniture – K12 Referral</fullName>
                </value>
                <value>
                    <fullName>Furniture – Operations Unite</fullName>
                </value>
                <value>
                    <fullName>Furniture – RFP Interiors</fullName>
                </value>
                <value>
                    <fullName>Healthcare PPE 2020</fullName>
                </value>
                <value>
                    <fullName>Healthy Schools</fullName>
                </value>
                <value>
                    <fullName>HON Refer &amp; Earn</fullName>
                </value>
                <value>
                    <fullName>HP BD Conversion</fullName>
                </value>
                <value>
                    <fullName>Office Depot Opportunity with CompuCom Services</fullName>
                </value>
                <value>
                    <fullName>Omnia - CBFS email campaign</fullName>
                </value>
                <value>
                    <fullName>OMNIA Top 100</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Print - Day 1</fullName>
                </value>
                <value>
                    <fullName>Real-Estate Group 2020</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Televerde</fullName>
                </value>
                <value>
                    <fullName>UC of CA CBFS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Opportunity Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acquire</fullName>
                </value>
                <value>
                    <fullName>Retain</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Oracle_Entity_Id__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Entity Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Booked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requested by Workspace Interiors team to track received purchase orders for Opportunities</description>
        <label>Order Booked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order #</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outline_Transition_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outline Transition Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overlay_Sales_IDs__c</fullName>
        <label>Overlay Sales IDs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Region__c</fullName>
        <formula>Owner.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
</CustomObject>